[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/BaseButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://sound/explore_bgm.mp3" type="AudioStream" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Menu" parent="." instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = -9.0
margin_right = 8.0
margin_bottom = -9.0

[node name="Title" parent="Menu/NinePatchRect/MarginContainer/ContentContainer" index="0"]
grow_horizontal = 2
text = "Seed Scatter"

[node name="StartButton" parent="Menu/NinePatchRect/MarginContainer/ContentContainer/ButtonContainer" index="0" instance=ExtResource( 2 )]
margin_top = 11.0
margin_right = 256.0
margin_bottom = 22.0
text = "Start"

[node name="OptionsButton" parent="Menu/NinePatchRect/MarginContainer/ContentContainer/ButtonContainer" index="1" instance=ExtResource( 2 )]
margin_top = 30.0
margin_right = 256.0
margin_bottom = 41.0
text = "Options"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="Menu/NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]

[editable path="Menu"]
